--- a/mensaje.html
+++ b/mensaje.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="card">
-        <h1>¡Gracias por aceptar! ❤️</h1>
-        <p>Eres la persona más especial para mí, y no puedo esperar para celebrar este día contigo. ¡Te quiero muchísimo! 💕</p>
+        <h1>Que ya seamos novios, eso no quiere decir que te pregunte ¡Gracias por aceptar! ❤️</h1>
+        <p>Eres la persona más especial para mí, y no puedo esperar para celebrar ese día contigo, tengo muchos besos que contarte y cosistas por regalarte. Te amo muchísimo mi cocodrilito 💕</p>
     </div>
 </body>
 </html>
