--- a/mensaje.html
+++ b/mensaje.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <h1>Gracias por elegirme ❤️</h1>
-        <p>Anque ya somos novios, no significa que deje de preguntarte. Eres la persona más especial para mí, y no puedo esperar para celebrar ese día contigo, tengo muchos besos que contarte y cosistas por regalarte. Te amo muchísimo 💕</p>
+        <p>Anque ya seamos novios, no significa que deje de preguntarte. Eres la persona más especial para mí, y no puedo esperar para celebrar ese día contigo, tengo muchos besos que contarte y cosistas por regalarte. Te amo muchísimo 💕</p>
     </div>
 </body>
 </html>
