--- a/mensaje.html
+++ b/mensaje.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card">
-        <h1>Sabía que aceptarías😍. Gracias por elegirme ❤️</h1>
+        <h1>Sabía que aceptarías😍 Gracias por elegirme ❤️</h1>
         <p>Aunque ya seamos novios, eso no significa que deje de preguntarte. Eres la persona más especial para mí, no puedo esperar para celebrar ese día contigo, tengo muchos besos que contarte y cositas por regalarte. Te amo muchísimo 💕</p>
     </div>
 </body>
